#include "mscommon_server_player.h"
#include "src/game_logic/game_registry.h"
#include "src/network/message_system.h"
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE

///<<<rpc begin
void ServerPlayerLoginServiceImpl::UpdateGateSessionMs2Gs(entt::entity player,
    const ::UpdateGateSessionGsRequest* request,
    ::google::protobuf::Empty* response)
{
    ///<<< BEGIN WRITING YOUR CODE
    ///<<< END WRITING YOUR CODE
}


void ServerPlayerLoginServiceImpl::LoginMs2Gs(entt::entity player,
    const ::Ms2GsLoginRequest* request,
    ::google::protobuf::Empty* response)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

///<<<rpc end
